--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -29,7 +29,7 @@ NASA uses wind tunnels to test scale models of aircraft and spacecraft. The wind
 \end{figure}
 \end{center}
 NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph) \cite{NASA}.
-\section{Stewart Platform}
+\subsection{Stewart Platform}
 Parallel link manipulators have become an important area of research due to their: precision, rigidity and high-load-to-weight ratio. These manipulators find practical applications in flight simulators, precise machining and applications that require disturbance isolation \cite{iqbal_dynamic_2008}. The Stewart platform is an example of a parallel manipulator.
 
 A Stewart platform is a parallel manipulator that provides six-degree-of-freedom (DOF) i.e. roll, pitch, yaw, surge, sway and heave, and can be controlled in all these freedoms simultaneously. The platform consists six variable-length electro-mechanical actuators connecting a top plate to a base plate with spherical joints.
@@ -79,6 +79,62 @@ controller design
 \item A simple way to calculate control law using sliding-mode technique 
 \cite{iqbal2006direct}.
 \end{enumerate}
+\subsubsection{Quality Index ($\lambda$) of the Stewart Platform}
+Quality index $(\lambda)$ varies from 0 to 1.\\
+ Where,\\
+ 0 - design with singularities and\\
+ 1 - Optimal design in which the determinant of the correspondent Jacobian matrix is maximum.
+ 
+ \textbf{Singularities} - uncontrollable states.
+ 
+ The Jacobian matrix relates the axial forces in the $i^{th}$ bar with the applied
+ forces and torques and is given in equation \eqref{eq:myeqn1} \cite{fernandes_design_nodate}:
+ 
+ \begin{ceqn}
+ 	\begin{align}
+ 		J =
+ 		\begin{pmatrix}
+ 		\hat{\boldsymbol{S_{1}}} & \hat{\boldsymbol{S_{2}}} & \hat{\boldsymbol{S_{3}}} & ... & \hat{\boldsymbol{S_{n}}}
+ 		\end{pmatrix}
+ 		\label{eq:myeqn1}
+ 	\end{align}
+ \end{ceqn}
+ 
+ Where n - number of bars and $ \hat{\boldsymbol{S_{i}}}$ - unit vector of the Plucker coordinates along the line of the
+ $i_{th}$ bar.
+ 
+ Quality index can be obtained as shown:
+ \begin{ceqn}
+ 	\begin{align}
+ 		\lambda = \frac{|J|}{|J|_{m}}
+ 		\label{eq:myeqn}			
+ 	\end{align}
+ \end{ceqn}
+ Where, $|J|$ is the determinant of the Jacobian matrix of a given Stewart platform configuration, and $ |J|_{m} $ - determinant of Jacobian Matrix of the optimal configuration.
+ 
+ Applying equation \eqref{eq:myeqn1} to the general configuration of a 6-6 platform, it is
+ possible to obtain the Jacobian matrix and thus its determinant which can be obtained as follows:
+ \begin{ceqn}
+ 	\begin{align}
+ 		|J| =
+ \frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3}
+ \label{eq:myeqn02}
+ 	\end{align}
+ \end{ceqn}
+ Where:\\
+ a - diameter of moving platform\\
+ b - diameter of base\\
+ $\alpha$ - angle of attack\\
+ $ \beta $ - Side slip angle\\
+ h - distance between the base and the moving platform\\
+ 
+ $|J|_{m}$ is found by differentiating equation \eqref{eq:myeqn02} with respect to h and equating to 0 resulting in \cite{fernandes_design_nodate}:
+ \begin{ceqn}
+ \begin{align}
+ 	h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))}
+ 	\label{eq:myeqn}
+ \end{align}
+ \end{ceqn}
 
 \subsection{Force Balances}
 For wind tunnel applications, the wind axes is used as the reference frame. Where, X axis points to the accelerated air; Z axis points downward and; Y axis points to the right in the direction of the wind. In the reference frame above, lift is in the negative z-direction, drag in the negative x-direction and, side force in the negative y-direction \cite{bueno2018design}.
@@ -104,15 +160,15 @@ Several different types of external force balances are available for wind tunnel
 \end{center}
 In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives \cite{ferreira2015design}. 
 
-The platform balance is relatively easy to construct, assemble and instrument. However, for this balance, forces and torques are coupled and the balance resolving centre does not coincide with the centre of the tunnel.
+The platform balance is relatively easy to construct, assemble and instrument. However, for this balance, forces and torques are coupled and the balance resolving center does not coincide with the center of the tunnel.
  
-In the yoke balance configuration, forces and torques are coupled and the balance resolving centre coincides with the centre of the tunnel. This configuration, however, presents some structural deflections due to the large span of the measuring and support arms.
+In the yoke balance configuration, forces and torques are coupled and the balance resolving center coincides with the center of the tunnel. This configuration, however, presents some structural deflections due to the large span of the measuring and support arms.
 
 The pyramidal balance configuration is a further improvement of the yoke balance in order to overcome the shortcomings of the other balances. It is capable of measuring six components of forces and
 torques separately and without coupling, provided that the balance is well assembled and calibrated.
 
 It is possible to merge some of the force balance concepts to come up with an innovative, easy-to-manufacture and cost-effective external force balance. One such solution can be the use of a Stewart platform as a force balance. The Stewart platform offers another advantage - dynamic positioning of the model in the test section.
-The platform bars are subjected to axial forces only and can have strain-gauges coupled to each one as Wheatstone briges. Forces and torques are themn obtained based on the axial displacements obtained by the strain gauges\cite{fernandes_design_nodate}.
+The platform bars are subjected to axial forces only and can have strain-gages coupled to each one as Wheatstone bridges. Forces and torques are then obtained based on the axial displacements obtained by the strain gages\cite{fernandes_design_nodate}.
 
 Table \ref{tablecom} shows a summary of advantages and disadvantages of external force balances.
 \clearpage
@@ -184,7 +240,7 @@ Angle of attack (\textalpha)is the angle measured between the longitudinal axis 
 	\label{att}
 	\end{figure}
 \end{center}
-\subsection{State of the Art}
+\subsection{Previous Work}
 Force balance design for educational wind tunnels is an area of great interest. This is especially important
 for aerodynamics studies of airplane and airfoil models, as well as ground vehicles such as trucks
 and cars \cite{morris_force_2010}.
@@ -242,7 +298,7 @@ Further developments were made two years later to this design which are enumerat
 compensation of switching to a half bridge configuration for the strain gauges.
 \end{enumerate}
 \subsubsection{Stewart Platform at JKUAT}
-Six-DOF Stewart platforms have been designed and fabricated by students in the Mechatronic Engineering department as part of their final year projects. The Stewart platforms by the first two groups of students were for different applications and the one from FYP-17 was to be used as a force balance for Wind tunnel testing \cite{caleb}. 
+Six-DOF Stewart platforms have been designed and fabricated by students in the Mechatronic Engineering department as part of their final year projects. The Stewart platforms by the first two groups of students were for different applications and the one from FYP-17 was to be used as a force balance for Wind tunnel testing \cite{caleb}. Although the Stewart platform was built successfully, the group didn't achieve a force balance for the same. 
 \subsection{Summary of Gaps}
 Whereas the Force balance by the Mechanical Engineering department in Bradley University is relatively simple to construct, it still poses a challenge in terms of cost. Cost can be minimized based on load cell and actuator selection but this does not guarantee that the level of accuracy will not be compromised. Also, only two or three force components can be obtained. The force balace setup doesn't allow dynamic positioning of models in the wind tunnel during testing.
 
