--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -24,9 +24,9 @@ Whereas the force balances give very accurate results, some are expensive to bui
 \paragraph{} To develop a Stewart platform force balance and a control system for the Stewart platform. 
 \subsubsection{Specific Objectives}
 \begin{enumerate}
-\item To evaluate the mechanical feasibility of the already fabricated Stewart Platform.
-\item To develop a force balance for the Stewart platform and obtain forces and moments during model testing.
-\item To obtain flow velocity measurements in the wind tunnel by use of pitot tubes.
+\item To evaluate the mechanical feasibility of the already fabricated Stewart Platform using CAD software and mechanical calculations.
+\item To develop a force balance for the Stewart platform and obtain forces and moments measurement during model testing.
+\item To obtain flow velocity measurement in the wind tunnel by use of pitot tubes.
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
 \end{enumerate}
 \subsection{Expected Outcomes}
@@ -34,6 +34,6 @@ Whereas the force balances give very accurate results, some are expensive to bui
 \item A functional force balance for measuring the aerodynamic loads applied on a model
 and for calculating aerodynamic coefficients from the measurements taken.
 \item A velocity measurement system for the wind tunnel using pitot tubes.
-\item A human Machine Interface with access to control of the Stewart platform electronics
+\item A human machine interface with access to control of the Stewart platform electronics
 and data acquisition from sensors.
 \end{enumerate}
