--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -101,7 +101,7 @@ Stewart Platform simulation was done on MatLab using the Inverse kinematic equat
 \begin{center}
 	\begin{table}[H]
 	\centering
-	\caption{Maximum Servo angles for maximum yap,pitch, roll angles and maximum x,y and z displacements}
+	\caption[Maximum Servo angles]{Maximum Servo angles for maximum yaw,pitch, roll angles and maximum x,y and z displacements}
 	\label{roll}
 	\centering
 	\begin{tabular}{|l|l|}
