--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -18,7 +18,7 @@ Simulation and analysis of scaled models is an important step in the development
 
 Whereas the force balances give very accurate results, some are expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 \subsection{Problem Statement}
- The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT.
+ The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform force balance should be able to measure lift, drag and pitching moment in small models while performing dynamic positioning of models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT.
 \subsection{Objectives}
 \subsubsection{Main Objective}
 \paragraph{} To develop a Stewart platform force balance and a control system for the Stewart platform. 
