--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -151,22 +151,39 @@ Several different types of external force balances are available for wind tunnel
 \item Yoke
 \item Pyramidal
 \end{enumerate}
+In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives \cite{ferreira2015design}. 
 \begin{center}
 	\begin{figure}[H]
 	\centering
-	\includegraphics{Figures/Fig6}
-	\caption[External Force balances]{Typical configurations for external force balances \cite{ferreira2015design}}
+	\includegraphics{Figures/Wire}
+	\caption[Wire force balance]{Wire force balance \cite{ferreira2015design}}
 	\end{figure}
 \end{center}
-In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives \cite{ferreira2015design}. 
-
 The platform balance is relatively easy to construct, assemble and instrument. However, for this balance, forces and torques are coupled and the balance resolving center does not coincide with the center of the tunnel.
- 
+\begin{center}
+	\begin{figure}[H]
+	\centering
+	\includegraphics{Figures/platform}
+	\caption[Platform force balance]{Platform force balance \cite{ferreira2015design}}
+	\end{figure}
+\end{center}
 In the yoke balance configuration, forces and torques are coupled and the balance resolving center coincides with the center of the tunnel. This configuration, however, presents some structural deflections due to the large span of the measuring and support arms.
-
+\begin{center}
+	\begin{figure}[H]
+	\centering
+	\includegraphics{Figures/Yoke}
+	\caption[Yoke force balance]{Yoke force balance \cite{ferreira2015design}}
+	\end{figure}
+\end{center}
 The pyramidal balance configuration is a further improvement of the yoke balance in order to overcome the shortcomings of the other balances. It is capable of measuring six components of forces and
 torques separately and without coupling, provided that the balance is well assembled and calibrated.
-
+\begin{center}
+	\begin{figure}[H]
+	\centering
+	\includegraphics{Figures/Pyramid}
+	\caption[Pyramid force balance]{Pyramid force balance \cite{ferreira2015design}}
+	\end{figure}
+\end{center}
 It is possible to merge some of the force balance concepts to come up with an innovative, easy-to-manufacture and cost-effective external force balance. One such solution can be the use of a Stewart platform as a force balance. The Stewart platform offers another advantage - dynamic positioning of the model in the test section.
 The platform bars are subjected to axial forces only and can have strain-gages coupled to each one as Wheatstone bridges. Forces and torques are then obtained based on the axial displacements obtained by the strain gages\cite{fernandes_design_nodate}.
 
