--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -21,7 +21,7 @@ Whereas the force balances give very accurate results, some are expensive to bui
  The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform force balance should be able to measure lift, drag and pitching moment in small models while performing dynamic positioning of models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT.
 \subsection{Objectives}
 \subsubsection{Main Objective}
-\paragraph{} To develop a Stewart platform force balance and a control system for the Stewart platform. 
+\paragraph{} To develop a force balance and a control system for the Stewart platform. 
 \subsubsection{Specific Objectives}
 \begin{enumerate}
 \item To evaluate the mechanical feasibility of the already fabricated Stewart Platform using CAD software and mechanical calculations.
