--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -219,7 +219,25 @@ The moving platform has flanges to provide linking points of the Stewart Platfor
 	\end{figure}
 \end{center}
 
-Both stainless steel and mild steel would make a suitable base for the Stewart platform due to their weight. They are also easy to machine (machinability for Mild steel - 78 per cent, for stainless steel: 45 - 110 per cent). Mild steel is readily available in the Kenyan market. Stainless steel is a bit more expensive.
+Both stainless steel and mild steel would make a suitable base for the Stewart platform due to their weight. They are also easy to machine (machinability for Mild steel - 78 per cent, for stainless steel: 45 - 110 per cent). Mild steel is readily available in the Kenyan market. Stainless steel is a bit more expensive. A comparison of these metal weights and machinability properties is shown in table \ref{table2}.
+\begin{center}
+\begin{table}[!h]
+	\caption[Metal weight Properties]{Material weight properties}
+	\label{table2}
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{Metal} & \textbf{Density$(gcm^{-3})$} & \textbf{Machinability(percent)}\\
+\hline
+Aluminium (6061-T6)& 2.7 & 275\\
+\hline
+Mild Steel & 7.85 & 78\\
+\hline
+Stainless Steel & 7.5 - 8.0 & 45-110\\
+\hline
+\end{tabular}
+\end{table}
+\end{center}
 
 Due to cost constraints and for the Stewart platform's overall weight (and without compromising on the platform stability), aluminium can be used to manufacture the base. A thickness of 2.5mm for the base is used.
 \begin{center}
@@ -419,10 +437,26 @@ Mesh& Avg element size: 0.1mm\\
 \subsubsection{Inverse Kinematics of a Stewart Platform}
 This is the calculation of each leg length based on the desired position of the Stewart platform. 
 For the Stewart platform, the translation $^{p}T_{b}$ from the base origin to the platform origin can be described with a single vector T = $(t_{x} t_{y} t_{z})^{T} $. The rotation of the platform can be denoted as $^{p}R_{b}$. Thus the following relationship for the frame of reference can be stated \cite{Eisele_2019}:
-$$^{p}T_{b} = T$$
-	$$^{p}R_{b} = R$$
-	$$^{b}T_{p} =(^{p}T_{b})^{-1} =T^{-1}$$
-	$$^{b}R_{p} = (^{p}R_{b})^{-1} $$
+	\begin{ceqn}
+	\begin{align}
+	^{p}T_{b} = T
+	\end{align}
+	\end{ceqn}
+	\begin{ceqn}
+	\begin{align}
+	^{p}R_{b} = R
+	\end{align}
+	\end{ceqn}
+	\begin{ceqn}
+	\begin{align}
+	^{b}T_{p} =(^{p}T_{b})^{-1} =T^{-1}
+	\end{align}
+	\end{ceqn}
+	\begin{ceqn}
+	\begin{align}
+	^{b}R_{p} = (^{p}R_{b})^{-1}
+	\end{align}
+	\end{ceqn} 
 \begin{center}
 	\begin{figure}[!h]
 	\centering
