--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -152,11 +152,11 @@
 \listoftables 
 \newpage
 \clearpage
-\addcontentsline{toc}{section}{List of Abbreviations}
+%\addcontentsline{toc}{section}{List of Abbreviations}
 \input{Files/Nomenclature}
 \clearpage
 \newpage
-\addcontentsline{toc}{section}{List of Symbols}
+%\addcontentsline{toc}{section}{List of Symbols}
 \input{Files/Symbols}
 \clearpage
 \newpage
