--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -18,7 +18,9 @@ Simulation and analysis of scaled models is an important step in the development
 
 Whereas the force balances give very accurate results, some are expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 \subsection{Problem Statement}
- The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform force balance should be able to measure lift, drag and pitching moment in small models while performing dynamic positioning of models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT.
+Measured parameter obtained in aerodynamic testing are critical in development of parts. Current commercial force balances provide means to position models and obtained forces and moments during testing. 
+However, these force balances are quite expensive and some do not provide an integrated solution. This project goes trough the development of a stewart platform force balance which aims to provide a cost effective solution for the low speed wind tunnel available at the Engineering fluids lab at JKUAT. 
+The stewart platform force balance is meant to be able to measure 6 component aerodynamic loads as well as position the model within the wind tunnel with six degrees of freedom.
 \subsection{Objectives}
 \subsubsection{Main Objective}
 \paragraph{} To develop a force balance and a control system for the Stewart platform. 
