Title page done

--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -99,27 +99,30 @@
     \large{School of Mechanical, Materials, and Manufacturing Engineering}\\
    \large{Department of Mechatronic Engineering}\\
 
-    ------------------------------------------------------------------------------------------------\\[1.0cm]
+    ------------------------------------------------------------------------------------------------\\[0.8cm]
     \vspace{0.1cm}
     \LARGE{\textbf{Development of a 6 DOF Stewart platform
         Force Balance for a Low Speed Wind Tunnel}}\\
     \vspace{0.3cm}
-    \LARGE{\textbf{FYP 18-9
+    \large{\textbf{FYP 18-9
             }}\\
-    {\textbf{INTERIM REPORT
-                }}\\[0.4cm]
+    \large{\textbf{FINAL YEAR PROJECT REPORT}}
+                }\\[0.2cm]
     %\large{by}\\[0.6cm
 
-    \vspace{0.4cm}
+    %\vspace{0.1cm}
     \large{\textbf{Sammy Kerata Oina (ENM221-0089/2017)
             }}\\
      \large{\textbf{Earl Spencer Mogire~(ENM221-0074/2017)
-            }}\\[0.6cm]
+            }}\\[0.5cm]
     \large{\textbf{Supervisors}}\\
     \large{Dr. Anthony K. Muchiri
                 }\\
     \large{Ms. Maurine N. Andanje
                     }\\
+    \large{\textbf{Technologist}}\\
+    \large{Mr. J. Mbugua
+                }\\
      %Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.
 %     \large{\textbf{Supervisors}}\\
 %    \large{Dr.-Ing.~Jackson G. Njiri}\\
