--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -2,9 +2,11 @@
 \label{sec:introduction}
 Obtaining and simulating the aerodynamic performance of items in a wind tunnel is a
 significant and important part in the development of vehicles, aircraft and other machines
-that require aerodynamic performance evaluation. Due to the complex maneuvers that
+that require aerodynamic performance evaluation. For most wind tunnel experiments where existing force balances are used,
+it is only possible to alter the object's angle of attack by use of linear  actuators for example.
+However, due to the complex maneuvers that
 may require simulation, there is a need for dynamic positioning of the model of the object
-in the wind tunnel.
+in the wind tunnel. A six-DOF Stewart platform can be used to achieve these dynamic positions and can be used as a force balance.
 \subsection{Background}
 A Stewart platform is a six degree-of-freedom mechanism that consists of a base and a platform connected with six legs that can vary in length. Each leg of the Stewart platform is connected to the ground by a two-axis joint and is provided with controllable means for extending its length
 \cite{wittenburg2016stewart}. The six DOF Stewart Platform provides an elegant design for simulating flight conditions.\cite{stewart1965platform}. 
