--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -99,37 +99,37 @@
     \large{School of Mechanical, Materials, and Manufacturing Engineering}\\
    \large{Department of Mechatronic Engineering}\\
 
-    ------------------------------------------------------------------------------------------------\\[0.8cm]
-    \vspace{0.1cm}
-    \LARGE{\textbf{Development of a 6 DOF Stewart platform
-        Force Balance for a Low Speed Wind Tunnel}}\\
-    \vspace{0.3cm}
-    \large{\textbf{FYP 18-9
-            }}\\
-    \large{\textbf{FINAL YEAR PROJECT REPORT}}
-                }\\[0.2cm]
-    %\large{by}\\[0.6cm
-
-    %\vspace{0.1cm}
-    \large{\textbf{Sammy Kerata Oina (ENM221-0089/2017)
-            }}\\
-     \large{\textbf{Earl Spencer Mogire~(ENM221-0074/2017)
-            }}\\[0.5cm]
-    \large{\textbf{Supervisors}}\\
-    \large{Dr. Anthony K. Muchiri
-                }\\
-    \large{Ms. Maurine N. Andanje
+    ------------------------------------------------------------------------------------------------\\[0.1cm]
+      \vspace{0.1cm}
+        \LARGE{\textbf{Development of a 6 DOF Stewart platform
+            Force Balance for a Low Speed Wind Tunnel}}\\
+        \vspace{0.2cm}
+        \LARGE{\large\textbf{FYP 18-9
+                }}\\
+        {\large\textbf{INTERIM REPORT
+                    }}\\[0.1cm]
+        %\large{by}\\[0.6cm
+    
+        \vspace{0.1cm}
+        \large{\textbf{Sammy Kerata Oina (ENM221-0089/2017)
+                }}\\
+         \large{\textbf{Earl Spencer Mogire~(ENM221-0074/2017)
+                }}\\[0.3cm]
+        \large{\textbf{Supervisors}}\\
+        \large{Dr. Anthony K. Muchiri
                     }\\
-    \large{\textbf{Technologist}}\\
-    \large{Mr. J. Mbugua
-                }\\
-     %Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.
-%     \large{\textbf{Supervisors}}\\
-%    \large{Dr.-Ing.~Jackson G. Njiri}\\
-%    \large{Prof. George N. Nyakoe}\\
-%    \large{\ldots}    \\[0.2cm]\vfill
-    \large{\small{\today}}\\
-    \small{Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.}
+        \large{Ms. Maurine N. Andanje
+                        }\\
+        \large{\textbf{Technologist}}\\
+                \large{Mr. J Mbugua
+                            }\\
+         %Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.
+    %     \large{\textbf{Supervisors}}\\
+    %    \large{Dr.-Ing.~Jackson G. Njiri}\\
+    %    \large{Prof. George N. Nyakoe}\\
+    %    \large{\ldots}    \\[0.2cm]\vfill
+        \large{\small{\today}}\\
+        \small{Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.}
     ------------------------------------------------------------------------------------------------\\[1.5cm]
   \end{center}
 \end{titlepage}
