--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -8,12 +8,16 @@ However, due to the complex maneuvers that
 may require simulation, there is a need for dynamic positioning of the model of the object
 in the wind tunnel. A six-DOF Stewart platform can be used to achieve these dynamic positions and can be used as a force balance.
 \subsection{Background}
-A Stewart platform is a six degree-of-freedom mechanism that consists of a base and a platform connected with six legs that can vary in length. Each leg of the Stewart platform is connected to the ground by a two-axis joint and is provided with controllable means for extending its length
+A Stewart platform is a six degree-of-freedom mechanism that consists of a base and a platform connected with six legs. In some Stewart platforms,
+each leg is connected to the ground by a two-axis joint and is provided with controllable means for extending its length
 \cite{wittenburg2016stewart}. The six DOF Stewart Platform provides an elegant design for simulating flight conditions.\cite{stewart1965platform}. 
 
-The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by positioning models of these vehicles in the tunnel's test section. The Stewart platform can provide various dynamic positions to simulate complex vehicle maneuvers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
+The Stewart platform can be used in conjunction with wind tunnels for wind tunnel experiments. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by positioning models of these vehicles in the tunnel's test section. 
+The Stewart platform can provide various dynamic positions to simulate complex vehicle maneuvers. Incorporating a force balance with the Stewart platform will allow direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
 
-For this project, the force balance is intended to be built as simple and accessible as possible. Thus, use of a six DOF Stewart Platform as a force balance. A Stewart Platform has already been designed and fabricated by a previous group but is not integrated with a force balance. Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results and so making it fully operational.
+For this project, the force balance is intended to be built as simple and accessible as possible. Thus, the use of a six DOF Stewart Platform as a force balance. 
+A Stewart Platform has already been designed and fabricated by a previous group but is not integrated with a force balance. 
+Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results thus making it fully operational \cite{caleb}.
 
 \subsection{Problem Environment}
 Simulation and analysis of scaled models is an important step in the development of aircraft, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircraft and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircraft in the actual environment.
