--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -20,11 +20,12 @@ A Stewart Platform has already been designed and fabricated by a previous group 
 Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results thus making it fully operational \cite{caleb}.
 
 \subsection{Problem Environment}
-Simulation and analysis of scaled models is an important step in the development of aircraft, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircraft and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircraft in the actual environment.
+Simulation and analysis of scaled models is an important step in the development of aircraft, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircraft and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to simulate the 
+orientation of vehicles and aircraft in the actual environment.
 
 Whereas the force balances give very accurate results, some are expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 \subsection{Problem Statement}
-Measured parameter obtained in aerodynamic testing are critical in development of parts. Current commercial force balances provide means to position models and obtained forces and moments during testing. 
+Measured parameters obtained in aerodynamic testing are critical in the development of parts. Current commercial force balances provide means to position models and obtained forces and moments during testing. 
 However, these force balances are quite expensive and some do not provide an integrated solution. This project goes trough the development of a stewart platform force balance which aims to provide a cost effective solution for the low speed wind tunnel available at the Engineering fluids lab at JKUAT. 
 The stewart platform force balance is meant to be able to measure 6 component aerodynamic loads as well as position the model within the wind tunnel with six degrees of freedom.
 \subsection{Objectives}
