--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -33,10 +33,10 @@ The stewart platform force balance is meant to be able to measure 6 component ae
 \paragraph{} To develop a force balance and a control system for the Stewart platform. 
 \subsubsection{Specific Objectives}
 \begin{enumerate}
-\item To evaluate the mechanical feasibility of the already fabricated Stewart Platform using CAD software and mechanical calculations.
 \item To develop a force balance for the Stewart platform and obtain forces and moments measurement during model testing.
 \item To obtain flow velocity measurement in the wind tunnel by use of pitot tubes.
 \item To develop a Human-Machine Interface for measurement readings and control of the Stewart platform load balance.
+\item To improve model behaviour visualization in the wind tunnel by introduction of smoke streamlines in the wind tunnel.
 \end{enumerate}
 \subsection{Expected Outcomes}
 \begin{enumerate}
