--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -45,4 +45,5 @@ and for calculating aerodynamic coefficients from the measurements taken.
 \item A velocity measurement system for the wind tunnel using pitot tubes.
 \item A human machine interface with access to control of the Stewart platform electronics
 and data acquisition from sensors.
+\item A smoke generation and visualization assembly incorporated into the wind tunnel. 
 \end{enumerate}
