Literature review updated

--- a/Final Report/Bib/References.bib
+++ b/Final Report/Bib/References.bib
@@ -500,3 +500,14 @@ Socket Joint, 47mm x 47.5mm},
   url = {https://www.tecquipment.com},
   urldate = {10-Apr-2012}
 }
+
+@article{trinder2013development,
+  title={Development of a smoke visualisation system for wind tunnel laboratory experiments},
+  author={Trinder, Martin and Jabbal, Mark},
+  journal={International Journal of Mechanical Engineering Education},
+  volume={41},
+  number={1},
+  pages={27--43},
+  year={2013},
+  publisher={SAGE Publications Sage UK: London, England}
+}
