Production plan updated

--- a/Final Report/Files/Appendices.tex
+++ b/Final Report/Files/Appendices.tex
@@ -25,6 +25,10 @@
  \end{table}
  \end{center}
  \clearpage
+ \section{Production Plan}
+ \includepdf[pages=-]{Production plan}
+
+ \clearpage
  
 \section{Force transformation matrix} 
 In such a case the forces experienced at the top of the platform are distributed between the 6 legs and as result, a force transformation matrix is required to resolve the forces applied on each axis as measured by each load cell on each leg. 
