--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -11,6 +11,16 @@
 \usepackage{Styles/fancyheadings}
 \usepackage{tocloft}
 \usepackage[euler]{textgreek}
+\usepackage{booktabs}
+\usepackage{mhchem}
+\usepackage{siunitx}
+\usepackage{bm}
+\usepackage{tabularx,ragged2e,rotating}
+\newcolumntype{C}{>{\hspace{0pt}%
+    \Centering\arraybackslash}X}
+\usepackage[skip=0.333\baselineskip]{caption}
+\usepackage{longtable}
+\usepackage{pdflscape}
 %\usepackage{mathtools}
 %\usepackage{unicode-math}
 %\setmathfont{XITS Math}
