--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -47,3 +47,5 @@ and for calculating aerodynamic coefficients from the measurements taken.
 and data acquisition from sensors.
 \item A smoke generation and visualization assembly incorporated into the wind tunnel. 
 \end{enumerate}
+
+\subsection{Justification}
