--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -116,7 +116,7 @@
         \vspace{0.2cm}
         \LARGE{\large\textbf{FYP 18-9
                 }}\\
-        {\large\textbf{INTERIM REPORT
+        {\large\textbf{FINAL PROJECT REPORT
                     }}\\[0.1cm]
         %\large{by}\\[0.6cm
     
