--- a/Final Report/Files/Abstract.tex
+++ b/Final Report/Files/Abstract.tex
@@ -3,16 +3,14 @@
 
 \section*{Abstract}
 \label{sec:Abstract}
-Aerodynamic analysis of the performance of models within a wind tunnel is an important step in the design of vehicles and aircraft. It is important to measure the aerodynamic performance in metrics such as drag and lift in comparison to simulations during design.
-Due to the complex manoeuvres that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the design of a Stewart platform to replicate these complex manoeuvres during wind tunnel tests as well as to position the model to obtain the required data.
+Aerodynamic analysis of the performance of models within a wind tunnel is an important step in the design and development of vehicles and aircraft. Wind tunnel testing provides a verification means for data collected from simulations. 
+There is a need to orient models during testing, which is accomplished in this project by the use of a stewart platform.
 
-The modelling, simulation and development of a Stewart platform
-based force balance for a low speed wind tunnel will be covered in this work. 
-Modelling and simulation of the kinematics of the Stewart platform was done using MATLAB along with a simulation to visualize the movements. 
-The human machine interface dashboard was also created to allow interaction with the platform. The printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were created using Autodesk Inventor to show the configuration allowing for six degrees of freedom which was verified by the simulation on MATLAB.
+The force balance developed based on the stewart platform was designed to orient models with six degrees of freedom based on inverse kinematics. 
+The force balance was also designed to measure 6 components of forces and moments based on strain gauge sensors.  
+A human machine interface dashboard was also created to allow interaction with the platform. A printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were created using Autodesk Inventor to show the configuration allowing for six degrees based on the inverse kinematic equations. 
+A smoke distribution device was also developed to aid in visualizing air flow. Pitot tubes were also used to measure air velocity.
 
-Finally, models will be developed and tested in a wind tunnel to evaluate the performance
-of the platform. The platform should be able to position the test
-item and measure aerodynamic loads while pitot tubes will be used to measure air velocity. Data logging of the obtained measurements will be done using a bespoke computer program for further analysis.
-
+The force balance was tested in the wind tunnel with a model aerofoil. The dashboard was able to control the stewart platform orientation.
+ Data collection on the strain and air velocity was achieved during the test. The forces and moments obtained through a force transformation matrix from the strain data collected. The smoke visualization device also improved flow visibility.
 
